# flash

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  rabbitmq.conf
alembic/: env.py
alembic/versions/: 36d539433798_create_restaurants_table.py  37a79aff5860_make_password_reset_token_timestamps_.py  4576fc4791d8_order_table.py  587917cb1901_create_items_table.py  7943475e81a3_add_naming_convention_for_constraints.py  a187deffd9b1_add_user_table.py  b7dad784976b_add_password_reset_token_model.py  f5f7efdc32c1_add_order_indexes.py  ff806cd5ce32_add_processed_event_table.py
docs/: setup.md
docs/decisions/: 01_initial_setup.md
src/flash/: celery_app.py  celery_tasks.py  config.py  main.py  tasks.py  worker.py
src/flash/api/: deps.py
src/flash/api/routes/: health.py  item.py
src/flash/api/v1/: router.py
src/flash/api/v1/routes/: analytics_routes.py  auth_routes.py  item.py  item_routes.py  order_routes.py  restaurant_routes.py  user_routes.py
src/flash/consumers/: analytics.py  analytics_lag_monitor.py  order_notifications.py
src/flash/core/: config.py  consumer_db.py  db.py  exceptions.py  integrity.py  log_config.py  middleware.py  pagination.py  rate_limit.py  security.py  task_queue.py
src/flash/core/adapters/: __init__.py  cache.py  events.py  kafka_events.py  lock.py  mongodb.py
src/flash/models/: __init__.py  item.py  item_model.py  order_model.py  password_reset_token_model.py  processed_event_model.py  restaurant_model.py  user_model.py
src/flash/repositories/: __init__.py  base.py  item_repository.py  order_repository.py  password_reset_token_repository.py  processed_event_repository.py  restaurant_repository.py  user_repository.py
src/flash/schemas/: analytics_schema.py  auth_schemas.py  events.py  item.py  item_schema.py  order_schema.py  restaurant_schema.py  user_schema.py
src/flash/scripts/: init_analytics_db.py
src/flash/services/: __init__.py  analytics_service.py  auth_service.py  item_service.py  order_service.py  restaurant_service.py  user_service.py
src/flash/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_celery_tasks.py  test_health.py  test_item.py
tests/consumers/: test_analytics.py  test_order_notifications.py
tests/core/: test_exceptions.py
tests/schemas/: test_event_schemas.py
tests/schemas/snapshots/: order_created.v1.schema.json
tests/services/: test_analytics_service.py  test_auth_service.py  test_order_service.py  test_user_service.py
tests/v1/: conftest.py  test_auth.py  test_items.py  test_orders.py  test_restaurants.py  test_users.py
tests/workers/: test_tasks.py
